CME-34: Upgrade to Java 21